- Fixed layout issues (using fit within borders) - resize portlets listener - cleaned testing ext2 framework

--- a/pub/styles/WireFrameStructural.css
+++ b/pub/styles/WireFrameStructural.css
@@ -88,7 +88,7 @@ div#main-container {
 	background-color: #fff;
 	min-height: 400px;
 	min-width: 600px;
-	margin: 10px 10px 10px 10px;
+	margin: 0px 0px 0px 0px;
 	overflow: visible;
 }
 
